# youtube-transcript-summarizer

./: .env  README.md  app.py  pyproject.toml
